--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1115,6 +1115,7 @@
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
     "not-public": "Neveřejné",
     "not-registered": "Není registrována",
+    "not-send": "Neodesláno",
     "not-sent": "Neposlané",
     "not-stored-content": "Obsah není uložen",
     "not-valid-email": "Email %email% no válido",
@@ -1524,14 +1525,14 @@
     "sort-by-code-desc": "Seřadit podle kódu sestupně",
     "sort-by-column": "Seřadit podle sloupce",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Seřadit podle kreditu sestupně",
     "sort-by-date-asc": "Seřadit podle data vzestupně",
     "sort-by-date-desc": "Seřadit podle data sestupně",
     "sort-by-debit-asc": "Seřadit podle debetu vzestupně",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-asc": "Seřadit podle ceny vzestupně",
     "sort-by-price-desc": "Seřadit podle ceny sestupně",
     "sort-by-ref-asc": "Seřadit podle reference vzestupně",
     "sort-by-ref-desc": "Seřadit podle reference sestupně",
@@ -1756,7 +1757,7 @@
     "use-holes-invoices-esp": "Pokud odškrtnete použití mezer ve fakturách a některá odstraníte, zůstane v fakturaci mezera a budete mít problémy s pokladnou",
     "user": "Usuario",
     "user-and-config": "Uživatel a konfigurace",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Uživatelská příručka",
     "users": "Usuarios",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
