--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -590,7 +590,7 @@
     "es_EC": "es_EC",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "Vorgang unterliegt dem IGIC (Kanarische Inseln)",
     "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
     "es-tax-exception-art-7": "Spanien: N3 nicht steuerpflichtig Art. 7 LIVA – Nicht steuerpflichtige Vorgänge (Einlagen, Übertragung von UEA, Muster…)",
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Spanien: Ausnahme nach Artikel 25 des Umsatzsteuergesetzes",
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
     "es-tax-exception-location-rules": "Spanien: N2 Nicht steuerbar – Regeln zur Ortsbestimmung von Dienstleistungen (Art. 69–70 LIVA, B2B‑Dienstleistungen innerhalb oder außerhalb der EU)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Im Inland steuerbefreite Vorgänge gemäß Artikel 10.1 des Gesetzes 20\/1991 zum IGIC",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Spanien: N6 Umkehr der Steuerschuldnerschaft (Art. 84 LIVA)",
     "es-tax-regime-agrarian": "Besonderes Regime der Landwirtschaft, Viehzucht und Fischerei",
@@ -1115,6 +1115,7 @@
     "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
     "not-public": "Nicht öffentlich",
     "not-registered": "Nicht registriert",
+    "not-send": "Nicht senden",
     "not-sent": "Nicht gesendet",
     "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Ungültige E-Mail %email%",
@@ -1832,7 +1833,7 @@
     "years": "Jahre",
     "yes": "wenn",
     "yesterday": "Gestern",
-    "you-can-sort-images": "Sie können die Bilder ziehen und sortieren.",
+    "you-can-sort-images": "Sie können die Bilder per Drag & Drop sortieren.",
     "you-cant-delete-primary-variant": "Sie können die Hauptvariante des Produkts nicht löschen",
     "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
