--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -165,7 +165,7 @@
     "barcode": "Kod kreskowy",
     "bcc": "BCC",
     "become-sponsor": "Zostań sponsorem",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Operacja z korzyścią dla osób trzecich",
     "big": "Duży",
     "billing": "Fakturowanie",
     "billing-address": "Adres do faktury",
@@ -256,7 +256,7 @@
     "cifnif": "CIF\\\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Wyczyść filtry",
     "click-link-to-add": "Możesz dodać pliki z biblioteki w menu administratora.",
     "clone": "Duplikuj",
     "clone-account-entry": "Klonuj wpis księgowy",
@@ -1115,6 +1115,7 @@
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
     "not-registered": "Nie zarejestrowana",
+    "not-send": "Nie wysyłaj",
     "not-sent": "No enviado",
     "not-stored-content": "Zawartość nieprzechowana",
     "not-valid-email": "Email %email% jest nieprawidłowy",
@@ -1527,9 +1528,9 @@
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
     "sort-by-date-desc": "Sortuj wg daty malejąco",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Sortuj według debetu rosnąco",
     "sort-by-debit-desc": "Sortuj według debetu malejąco",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Sortuj według opisu (rosnąco)",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Sortuj według ceny malejąco",
@@ -1586,7 +1587,7 @@
     "subtotal": "Suma częściowa",
     "subtract": "Odjąć",
     "success": "Sukces",
-    "successive-tract": "Kolejny odcinek",
+    "successive-tract": "Dostawa łańcuchowa",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "Suma netto linii podatku musi wynosić: %lineNet%",
     "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
