--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -366,7 +366,7 @@
     "cron-job": "Tarefa programada",
     "cron-timeout": "O cron parou para não ultrapassar o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar este limite.",
     "crons": "Cronós",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "O arquivo CSV deve ter pelo menos 2 colunas",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre atual",
@@ -1115,6 +1115,7 @@
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
     "not-registered": "Não registrada",
+    "not-send": "Não enviar",
     "not-sent": "Não enviado",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
