--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -42,7 +42,7 @@
     "accounting-items": "Itens de contabilidade",
     "accounting-lines-error": "Erro nas linhas do registo contábil",
     "accounting-plan": "Plano de Contas",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "O plano contabilístico deve ter pelo menos 2 níveis: contas e subcontas.",
     "accounting-possible-duplicated": "Possível registo contábil duplicado deste outro. Se não houver, para evitar esta mensagem, basta alterar o conceito.",
     "accounting-reports": "Relatórios de contabilidade",
     "accounting-within-regularization": "O registo contábil está dentro de uma regularização de %tax%. Não pode ser excluído.",
@@ -165,7 +165,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Torne-se patrocinador",
-    "benefit-3-parties": "benefício de 3 partes",
+    "benefit-3-parties": "Operação com benefício a terceiros",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -1115,6 +1115,7 @@
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "Não público",
     "not-registered": "Não registada",
+    "not-send": "Não enviar",
     "not-sent": "Não enviado",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
@@ -1524,7 +1525,7 @@
     "sort-by-code-desc": "Ordenar por código decrescente",
     "sort-by-column": "Ordenar por coluna",
     "sort-by-credit-asc": "Ordenar por crédito ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Ordenar por crédito decrescente",
     "sort-by-date-asc": "Ordenar por data asc.",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-debit-asc": "Ordenar por débito ascendente",
