--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1080,7 +1080,7 @@
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
-    "new-product": "Nuevo producto",
+    "new-product": "Nou producte",
     "new-refund": "Nova devolució",
     "new-subaccount": "Nou subcompte",
     "new-supplier": "Nou proveïdor",
@@ -1115,6 +1115,7 @@
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
     "not-public": "No públic",
     "not-registered": "No registrada",
+    "not-send": "No enviar",
     "not-sent": "No enviat",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
@@ -1232,7 +1233,7 @@
     "php-extensions": "Extensions PHP",
     "php-extensions-required": "Extensiones PHP requerides",
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
-    "php-version-too-new": "Es recomana usar una versió de PHP entre la %min_version% i la %max_version%. Actualment tens la %version%",
+    "php-version-too-new": "Es recomana utilitzar una versió de PHP entre la %min_version% i la %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
     "pick-up-flight-id": "Vol de recollida",
     "pick-up-flight-time": "Hora vol de recollida",
@@ -1519,7 +1520,7 @@
     "software": "Programari",
     "sort": "Orde",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Ordenar per saldo descendent",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar per columna",
