Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1531,7 +1531,7 @@
     "sort-by-debit-asc": "Nach Soll aufsteigend sortieren",
     "sort-by-debit-desc": "Nach Soll absteigend sortieren",
     "sort-by-description-asc": "Nach Beschreibung aufsteigend sortieren",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Nach Beschreibung absteigend sortieren",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Nach Preis absteigend sortieren",
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
