--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -256,7 +256,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "cidades",
     "city": "Cidade",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Limpar filtros",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar a entrada contábil",
@@ -602,7 +602,7 @@
     "es-tax-exception-e6": "E",
     "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
     "es-tax-exception-n1": "Operações internas isentas ao abrigo do artigo 10.1 da Lei 20\/1991 do IGIC",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Operações isentas por aplicação do artigo 25 da Lei do IGIC",
     "es-tax-exception-passive-subject": "Exceção fiscal - sujeito passivo",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
