--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -256,7 +256,7 @@
     "cifnif": "TIC \/ TIN",
     "cities": "cidades",
     "city": "Cidade",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Limpar filtros",
     "click-link-to-add": "clicar no link para adicionar",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar a entrada contábil",
