Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -165,7 +165,7 @@
     "barcode": "Strichcode",
     "bcc": "BCC",
     "become-sponsor": "Sponsor werden",
-    "benefit-3-parties": "Vorteil 3 Parteien",
+    "benefit-3-parties": "Vorgang zugunsten Dritter",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
