--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -1577,7 +1577,7 @@
     "subaccount-belongs-other-year": "La subcuenta %subAccountCode% pertenece a otro ejercicio.",
     "subaccount-irpf": "Cuenta retenciones ventas",
     "subaccount-irpf-creditor": "Subcuenta de IRPF para compras",
-    "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
+    "subaccount-not-found": "Subcuenta %code% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subcuenta de pérdidas y ganancias no encontrada",
     "subaccount-sales": "Cuenta de ventas",
