Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -590,7 +590,7 @@
     "es_EC": "Španělština (Ekvádor)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "Operace podléhá IGIC (Kanárské ostrovy)",
     "es-operation-tax-other": "Operace nepodléhající výše uvedeným daním",
     "es-tax-exception-art-14": "Daňová výjimka (čl. 14)",
     "es-tax-exception-art-7": "Španělsko: N3 Nepodléhá dle čl. 7 LIVA – Operace nepodléhající (vklady, převod UEA, vzorky…)",
@@ -603,7 +603,7 @@
     "es-tax-exception-location-rules": "Španělsko: N2 Nepodléhá dani – Pravidla lokalizace služeb (články 69–70 LIVA, služby B2B v EU nebo mimo EU)",
     "es-tax-exception-n1": "es-tax-exception-n1",
     "es-tax-exception-n5": "es-tax-exception-n5",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "Španělsko: N6 Přenesení daňové povinnosti (čl. 84 LIVA)",
     "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
     "es-tax-regime-cash-criteria": "Hotovostní kritéria",
     "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
@@ -1531,7 +1531,7 @@
     "sort-by-debit-asc": "Seřadit podle debetu vzestupně",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Seřadit podle popisu sestupně",
     "sort-by-price-asc": "Seřadit podle ceny vzestupně",
     "sort-by-price-desc": "Seřadit podle ceny sestupně",
     "sort-by-ref-asc": "Seřadit podle reference vzestupně",
