--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -602,7 +602,7 @@
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
     "es-tax-exception-location-rules": "Spanien: N2 Nicht steuerbar – Regeln zur Ortsbestimmung von Dienstleistungen (Art. 69–70 LIVA, B2B‑Dienstleistungen innerhalb oder außerhalb der EU)",
     "es-tax-exception-n1": "Im Inland steuerbefreite Vorgänge gemäß Artikel 10.1 des Gesetzes 20\/1991 zum IGIC",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Befreite Umsätze gemäß Artikel 25 des IGIC-Gesetzes",
     "es-tax-exception-passive-subject": "Spanien: N6 Umkehr der Steuerschuldnerschaft (Art. 84 LIVA)",
     "es-tax-regime-agrarian": "Besonderes Regime der Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-cash-criteria": "K",
