--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -936,6 +936,7 @@
     "level": "Level",
     "level-benefit-sales": "Level to see benefits",
     "level-cost-sales": "Level to see costs",
+    "level-price-products": "Minimum level to modify prices",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -1280,6 +1281,7 @@
     "previously-purchased-from-supplier": "Previously purchased from supplier",
     "previously-sold-to-customer": "Previously purchased to customer",
     "price": "Price",
+    "price-edit-permission-warning": "You do not have sufficient permissions to modify the price.",
     "price-with-tax": "Price with tax",
     "principal": "Main",
     "print": "Print",
