--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -936,6 +936,7 @@
     "level": "Nivel",
     "level-benefit-sales": "Nivel para ver beneficios",
     "level-cost-sales": "Nivel para ver costes",
+    "level-price-products": "Nivel para modificar precios",
     "level1": "Nivel 1",
     "level2": "Nivel 2",
     "level3": "Nivel 3",
@@ -1270,6 +1271,7 @@
     "post-office-box": "Apartado",
     "postgresql": "PostgreSQL",
     "precio": "Precio",
+    "price-edit-permission-warning": "No tienes permisos suficientes para modificar el precio.",
     "predefined-concepts": "Conceptos Predefinidos",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
