--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -94,7 +94,7 @@
     "allow-sale-without-stock": "Zezwól na sprzedaż bez stanu magazynowego",
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Zezwól na modyfikację",
-    "already-installed": "Ya instalado",
+    "already-installed": "Już zainstalowano",
     "already-installed-p": "Program jest już zainstalowany",
     "always-to-company-email": "Zawsze na email firmy",
     "amount": "Kwota",
@@ -588,7 +588,7 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Operacja podlega VAT",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "es-operation-tax-igic",
     "es-operation-tax-other": "es-operation-tax-other",
