--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -592,7 +592,7 @@
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "Vorgang unterliegt dem IGIC (Kanarische Inseln)",
     "es-operation-tax-other": "es-operation-tax-other",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "Spanien: N4 Nicht steuerpflichtig Art. 14 LIVA – Vorgänge im Zusammenhang mit Exporten",
     "es-tax-exception-art-7": "Spanien: N3 nicht steuerpflichtig Art. 7 LIVA – Nicht steuerpflichtige Vorgänge (Einlagen, Übertragung von UEA, Muster…)",
     "es-tax-exception-e1": "Spanien: Ausnahme nach Artikel 20 des Umsatzsteuergesetzes",
     "es-tax-exception-e2": "Spanien: Ausnahme nach Artikel 21 des Umsatzsteuergesetzes",
